--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "client",
-  "version": "0.0.0",
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "dev": "vite"
-  },
-  "resolutions": {},
-  "dependencies": {
-    "@tanstack/react-router": "^1.16.5",
-    "@tanstack/router-devtools": "^1.16.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@tanstack/router-vite-plugin": "^1.16.5",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "vite": "^5.1.3"
-  }
+	"name": "client",
+	"version": "0.0.0",
+	"sideEffects": false,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"seed:db:rooms": "npx convex import --table rooms convex/sampleData.jsonl"
+	},
+	"resolutions": {},
+	"dependencies": {
+		"@clerk/clerk-react": "^4.30.5",
+		"@tanstack/react-router": "^1.16.5",
+		"@tanstack/router-devtools": "^1.16.5",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@tanstack/router-vite-plugin": "^1.16.5",
+		"@types/node": "^20.11.19",
+		"@types/react": "^18.2.56",
+		"@types/react-dom": "^18.2.19",
+		"vite": "^5.1.3"
+	}
 }
