--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-router": "^1.16.5",
     "@tanstack/router-devtools": "^1.16.5",
     "convex": "^1.9.0",
+    "server": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
