--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "sideEffects": false,
   "workspaces": [
-    "apps/*"
+    "client",
+    "server"
   ],
   "scripts": {},
   "engines": {
