--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "la-radio-despote",
-  "version": "0.0.0",
-  "private": true,
-  "sideEffects": false,
-  "workspaces": [
-    "client",
-    "server"
-  ],
-  "scripts": {},
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "resolutions": {},
-  "dependencies": {
-    "convex": "^1.9.0"
-  }
+	"name": "la-radio-despote",
+	"version": "0.0.0",
+	"private": true,
+	"sideEffects": false,
+	"workspaces": [
+		"client",
+		"server"
+	],
+	"scripts": {
+		"seed": "npx convex import --replace --table users sampleData/sampleUsers.jsonl && npx convex import --replace --table rooms sampleData/sampleRooms.jsonl && npx convex import --replace --table tracks sampleData/sampleTracks.jsonl"
+	},
+	"engines": {
+		"node": ">=20.0.0"
+	},
+	"resolutions": {},
+	"dependencies": {
+		"convex": "^1.9.0"
+	}
 }
