--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,17 @@
     "@tanstack/react-router": "^1.16.5",
     "@tanstack/router-devtools": "^1.16.5",
     "convex": "^1.9.0",
-    "server": "*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "server": "*",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@tanstack/router-vite-plugin": "^1.16.5",
     "@tauri-apps/cli": "^1.5.9",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/spotify-web-playback-sdk": "^0.1.19",
     "vite": "^5.1.3"
   }
 }
