--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "dotenv -e ../.env.local vite",
+    "build": "dotenv -e ../.env.local vite build",
     "seed:db:rooms": "npx convex import --table rooms ../../sampleData.jsonl"
   },
   "resolutions": {},
@@ -25,6 +25,7 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/spotify-web-playback-sdk": "^0.1.19",
+    "dotenv-cli": "^7.3.0",
     "vite": "^5.1.3"
   }
 }
