--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "client",
-  "version": "0.0.0",
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {
-    "dev": "dotenv -e ../.env.local vite",
-    "build": "dotenv -e ../.env.local vite build",
-    "seed:db:rooms": "npx convex import --table rooms ../../sampleData.jsonl"
-  },
-  "resolutions": {},
-  "dependencies": {
-    "@clerk/clerk-react": "^4.30.5",
-    "@tanstack/react-router": "^1.16.5",
-    "@tanstack/router-devtools": "^1.16.5",
-    "convex": "^1.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "server": "*",
-    "zustand": "^4.5.1"
-  },
-  "devDependencies": {
-    "@tanstack/router-vite-plugin": "^1.16.5",
-    "@tauri-apps/cli": "^1.5.9",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@types/spotify-web-playback-sdk": "^0.1.19",
-    "dotenv-cli": "^7.3.0",
-    "vite": "^5.1.3"
-  }
+	"name": "client",
+	"version": "0.0.0",
+	"sideEffects": false,
+	"type": "module",
+	"scripts": {
+		"dev": "dotenv -e ../server/.env.local vite",
+		"build": "dotenv -e ../server/.env.local vite build",
+		"seed:db:rooms": "npx convex import --table rooms ../../sampleData.jsonl"
+	},
+	"resolutions": {},
+	"dependencies": {
+		"@clerk/clerk-react": "^4.30.5",
+		"@tanstack/react-router": "^1.16.5",
+		"@tanstack/router-devtools": "^1.16.5",
+		"convex": "^1.9.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"server": "*",
+		"zustand": "^4.5.1"
+	},
+	"devDependencies": {
+		"@tanstack/router-vite-plugin": "^1.16.5",
+		"@tauri-apps/cli": "^1.5.9",
+		"@types/react": "^18.2.56",
+		"@types/react-dom": "^18.2.19",
+		"@types/spotify-web-playback-sdk": "^0.1.19",
+		"dotenv-cli": "^7.3.0",
+		"vite": "^5.1.3"
+	}
 }
