--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"server"
 	],
 	"scripts": {
-		"dev": "",
+		"dev": "concurrently 'yarn workspace client dev' 'yarn workspace server dev'",
 		"seed": "npx convex import --replace --table users sampleData/sampleUsers.jsonl && npx convex import --replace --table rooms sampleData/sampleRooms.jsonl && npx convex import --replace --table tracks sampleData/sampleTracks.jsonl"
 	},
 	"engines": {
@@ -17,5 +17,8 @@
 	"resolutions": {},
 	"dependencies": {
 		"convex": "^1.9.0"
+	},
+	"devDependencies": {
+		"concurrently": "^8.2.2"
 	}
 }
