--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "server",
-  "version": "0.0.0",
-  "sideEffects": false,
-  "type": "module",
-  "scripts": {},
-  "exports": {
-    ".": "./index.ts"
-  },
-  "resolutions": {},
-  "dependencies": {},
-  "devDependencies": {}
+	"name": "server",
+	"version": "0.0.0",
+	"sideEffects": false,
+	"type": "module",
+	"scripts": {
+		"dev": "convex dev",
+		"seed": "npx convex import --replace --table users sampleData/sampleUsers.jsonl && npx convex import --replace --table rooms sampleData/sampleRooms.jsonl && npx convex import --replace --table tracks sampleData/sampleTracks.jsonl"
+	},
+	"exports": {
+		".": "./index.ts"
+	},
+	"resolutions": {},
+	"dependencies": {
+		"convex": "^1.9.0"
+	},
+	"devDependencies": {}
 }
