--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	],
 	"scripts": {
 		"dev": "concurrently 'yarn workspace client dev' 'yarn workspace server dev'",
+		"dev:tauri": "concurrently 'yarn workspace client tauri dev' 'yarn workspace server dev'",
 		"seed": "npx convex import --replace --table users sampleData/sampleUsers.jsonl && npx convex import --replace --table rooms sampleData/sampleRooms.jsonl && npx convex import --replace --table tracks sampleData/sampleTracks.jsonl"
 	},
 	"engines": {
