--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"server": "*",
+		"spotify-web-api-js": "^1.5.2",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"zustand": "^4.5.1"
