--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"convex": "^1.9.0",
+		"lucide-react": "^0.331.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"server": "*",
