--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 	"resolutions": {},
 	"dependencies": {
 		"@clerk/clerk-react": "^4.30.5",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@tanstack/react-router": "^1.16.5",
 		"@tanstack/router-devtools": "^1.16.5",
 		"class-variance-authority": "^0.7.0",
@@ -34,6 +35,8 @@
 		"dotenv-cli": "^7.3.0",
 		"postcss": "^8.4.35",
 		"tailwindcss": "^3.4.1",
-		"vite": "^5.1.3"
+		"typescript": "^5.3.3",
+		"vite": "^5.1.3",
+		"vite-plugin-checker": "^0.6.4"
 	}
 }
