Adding dialog to add tracks

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 	"resolutions": {},
 	"dependencies": {
 		"@clerk/clerk-react": "^4.30.5",
+		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@spotify/web-api-ts-sdk": "^1.2.0",
