--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,12 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.7",
-		"@spotify/web-api-ts-sdk": "^1.2.0",
 		"@tanstack/react-router": "^1.16.5",
 		"@tanstack/router-devtools": "^1.16.5",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"convex": "^1.9.0",
+		"date-fns": "^3.3.1",
 		"lucide-react": "^0.331.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
