--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@clerk/clerk-react": "^4.30.5",
 		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@tanstack/react-router": "^1.16.5",
