--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"@tanstack/router-devtools": "^1.16.5",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"cmdk": "^0.2.1",
 		"convex": "^1.9.0",
 		"date-fns": "^3.3.1",
 		"lucide-react": "^0.331.0",
