--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
 		"lucide-react": "^0.331.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.50.1",
 		"server": "*",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
