--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
 	"resolutions": {},
 	"dependencies": {
 		"@clerk/clerk-react": "^4.30.5",
+		"@hookform/resolvers": "^3.3.4",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -31,6 +33,7 @@
 		"server": "*",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.4",
 		"zustand": "^4.5.1"
 	},
 	"devDependencies": {
