--- a/client/package.json
+++ b/client/package.json
@@ -42,8 +42,15 @@
 		"@types/react": "^18.2.56",
 		"@types/react-dom": "^18.2.19",
 		"@types/spotify-web-playback-sdk": "^0.1.19",
+		"@typescript-eslint/eslint-plugin": "^7.1.0",
+		"@typescript-eslint/parser": "^7.1.0",
 		"autoprefixer": "^10.4.17",
 		"dotenv-cli": "^7.3.0",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
 		"postcss": "^8.4.35",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
