--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@tanstack/react-router": "^1.16.5",
 		"@tanstack/router-devtools": "^1.16.5",
+		"canvas-confetti": "^1.9.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"cmdk": "^0.2.1",
@@ -39,6 +40,7 @@
 	"devDependencies": {
 		"@tanstack/router-vite-plugin": "^1.16.5",
 		"@tauri-apps/cli": "^1.5.9",
+		"@types/canvas-confetti": "^1.6.4",
 		"@types/react": "^18.2.56",
 		"@types/react-dom": "^18.2.19",
 		"@types/spotify-web-playback-sdk": "^0.1.19",
