--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.7",
+		"@tanstack/react-query": "^5.24.1",
 		"@tanstack/react-router": "^1.16.5",
 		"@tanstack/router-devtools": "^1.16.5",
 		"canvas-confetti": "^1.9.2",
