--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.50.1",
+		"react-intersection-observer": "^9.8.1",
 		"server": "*",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
