--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-slider": "^1.1.2",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@tanstack/react-query": "^5.24.1",
 		"@tanstack/react-router": "^1.16.5",
