--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,9 @@
 	"devDependencies": {
 		"@tanstack/router-vite-plugin": "^1.16.5",
 		"@tauri-apps/cli": "^1.5.9",
+		"@testing-library/react": "^14.2.1",
 		"@types/canvas-confetti": "^1.6.4",
+		"@types/jest": "^29.5.12",
 		"@types/react": "^18.2.56",
 		"@types/react-dom": "^18.2.19",
 		"@types/spotify-web-playback-sdk": "^0.1.19",
@@ -60,6 +62,7 @@
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"jest": "^29.7.0",
 		"postcss": "^8.4.35",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.3.3",
